--- a/OS X El Capitan/gtk-3.20/gtk-contained.css
+++ b/OS X El Capitan/gtk-3.20/gtk-contained.css
@@ -192,7 +192,7 @@ assistant .sidebar {
   border: none; }
   assistant .sidebar:backdrop {
     background-color: @theme_unfocused_bg_color;
-    border-color: none; }
+    border-color: transparent; }
 assistant.csd .sidebar {
   border-top-style: none; }
 assistant .sidebar label {
@@ -249,7 +249,7 @@ entry {
   color: @theme_fg_color;
   border-color: @borders;
   background-color: alpha(white, 0.7);
-  box-shadow: solid 0 1px 0 1px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.2); }
   spinbutton:not(.vertical) image.left,
   entry image.left {
     padding-left: 0;
@@ -535,7 +535,7 @@ button {
   button:checked {
     color: @theme_fg_color;
     outline-color: rgba(46, 52, 54, 0.3);
-    border-color: none;
+    border-color: transparent;
     background-image: none;
     background-color: transparent;  /* transparent button for titlebar action buttons */
     box-shadow: none;
@@ -1262,7 +1262,7 @@ button {
     background-image: none; }
 .inline-toolbar
 button, .inline-toolbar
-button:backdrop { 
+button:backdrop {
   border-radius: 0;
   border-width: 1px; }
 .primary-toolbar
@@ -1843,7 +1843,7 @@ searchbar,
 .location-bar {
   border-style: solid;
   border-color: @borders;
-  background-color: theme_bg_color; } /*#d9d9d7*/
+  background-color: @theme_bg_color; } /*#d9d9d7*/
   .inline-toolbar:backdrop, searchbar:backdrop,
   .location-bar:backdrop {
     border-color: shade(@borders, 0.95);
@@ -2227,7 +2227,7 @@ window.csd > .titlebar:not(headerbar) {
 }
 
 
-.titlebar .titlebutton.maximize:hover, 
+.titlebar .titlebutton.maximize:hover,
 .titlebar .titlebutton.maximize:active,
 .titlebar .titlebutton.maximize:checked  {
     color: transparent;
@@ -2578,7 +2578,7 @@ notebook > header {
     border-color: shade(@borders, 0.95);
     background-color: transparent; }
   notebook > header tabs {
-    margin: -1px; 
+    margin: -1px;
     padding: 2px 0;
     background-color: shade(@theme_bg_color, 0.95);}
   notebook > header.top {
@@ -2590,7 +2590,7 @@ notebook > header {
       notebook > header.top > tabs > tab:backdrop {
         box-shadow: none; }
       notebook > header.top > tabs > tab:checked {
-        background-image: linear-gradient(to bottom, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9)); 
+        background-image: linear-gradient(to bottom, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9));
 	color: @theme_selected_fg_color; }
   notebook > header.bottom {
     border-top-style: solid; }
@@ -2602,31 +2602,31 @@ notebook > header {
       notebook > header.bottom > tabs > tab:backdrop {
         box-shadow: none; }
       notebook > header.bottom > tabs > tab:checked {
-        background-image: linear-gradient(to bottom, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9)); 
+        background-image: linear-gradient(to bottom, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9));
 	color: @theme_selected_fg_color; }
   notebook > header.left {
     border-right-style: solid; }
     notebook > header.left > tabs {
-      margin-right: -2px; 
+      margin-right: -2px;
       background-color: shade(@theme_bg_color, 0.95);}
       notebook > header.left > tabs > tab:hover {
       background-color: shade(@theme_bg_color, 0.97); }
       notebook > header.left > tabs > tab:backdrop {
         box-shadow: none; }
       notebook > header.left > tabs > tab:checked {
-        background-image: linear-gradient(to right, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9)); 
+        background-image: linear-gradient(to right, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9));
 	color: @theme_selected_fg_color; }
   notebook > header.right {
     border-left-style: solid; }
     notebook > header.right > tabs {
-      margin-left: -2px; 
+      margin-left: -2px;
       background-color: shade(@theme_bg_color, 0.95);}
       notebook > header.right > tabs > tab:hover {
       background-color: shade(@theme_bg_color, 0.97); }
       notebook > header.right > tabs > tab:backdrop {
         box-shadow: none; }
       notebook > header.right > tabs > tab:checked {
-        background-image: linear-gradient(to left, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9)); 
+        background-image: linear-gradient(to left, shade(@theme_selected_bg_color, 1.1), shade(@theme_selected_bg_color, 0.9));
 	color: @theme_selected_fg_color; }
   notebook > header.top > tabs > arrow {
     border-top-style: none; }
@@ -2675,7 +2675,7 @@ notebook > header {
   notebook > header tab {
     min-height: 15px;
     min-width: 30px;
-    padding: 2px 8px; 
+    padding: 2px 8px;
     outline-offset: -5px;
     color: @insensitive_fg_color;
     font-weight: bold;
@@ -2777,7 +2777,7 @@ scrollbar {
   scrollbar.right {
     border-left: 1px solid transparent; }
   scrollbar:backdrop {
-    background-color: @shade(theme_bg_color, 0.9);
+    background-color: shade(@theme_bg_color, 0.9);
     border-color: shade(@borders, 0.95);
     transition: 200ms ease-out; }
   scrollbar slider {
@@ -2804,7 +2804,7 @@ scrollbar {
   scrollbar.fine-tune.vertical slider {
     border-width: 2px; }
   scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
-    border-color: solid 1px 0 0 0 shade(@theme_bg_color, 0.8);
+    border-color: shade(@theme_bg_color, 0.8);
     opacity: 1;
     margin: 0;
     background-color: shade(@theme_bg_color, 0.9); }
@@ -4869,7 +4869,7 @@ row:selected colorswatch {
 colorswatch#editor-color-sample {
   border-radius: 0; }
   colorswatch#editor-color-sample overlay {
-    border-radius: 4.0; }
+    border-radius: 4.0px; }
 
 colorchooser .popover.osd {
   border-radius: 5px; }
@@ -4930,7 +4930,7 @@ decoration {
 /* Server-side decoration (SSD) */
 .window-frame.ssd {
     border-radius: 6px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.18); 
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.18);
 }
 
 .window-frame.ssd,
@@ -5090,4 +5090,4 @@ stackswitcher button.circular,
 stackswitcher button.text-button.circular {
   min-width: 32px;
   min-height: 32px;
-  padding: 0; }	
+  padding: 0; }
