--- a/OS X El Capitan/gtk-3.20/gtk-dark.css
+++ b/OS X El Capitan/gtk-3.20/gtk-dark.css
@@ -1,9 +1,9 @@
 /* search for rgba value important! 46, 52, 54 */
 
 /* default color scheme */
-@define-color bg_color #F5F5F5;
-@define-color fg_color #4c4c4c;
-@define-color base_color #ffffff;
+@define-color bg_color #3C3C3C;
+@define-color fg_color #F9F9F9;
+@define-color base_color #3C3C3C;
 @define-color text_color #4c4c4c;
 /*@define-color selected_bg_color #066DC1;*/
 @define-color selected_bg_color #3f9bfd;
@@ -51,7 +51,7 @@ widget text/foreground color on backdrop windows */
 @define-color theme_unfocused_fg_color #6c6c6c;
 /*
 text color for entries, views and content in general on backdrop windows */
-@define-color theme_unfocused_text_color black;
+@define-color theme_unfocused_text_color white;
 /*
 widget base background color on backdrop windows */
 @define-color theme_unfocused_bg_color #f5f5f5;
