--- a/OS X El Capitan/gtk-3.20/gtk-dark.css
+++ b/OS X El Capitan/gtk-3.20/gtk-dark.css
@@ -8,7 +8,7 @@
 /*@define-color selected_bg_color #066DC1;*/
 @define-color selected_bg_color #3f9bfd;
 @define-color selected_fg_color #ffffff;
-@define-color tooltip_bg_color #fff;
+@define-color tooltip_bg_color #3C3C3C;
 @define-color tooltip_fg_color #4c4c4c;
 @define-color theme_dark_fg_color #fff;
 @define-color theme_dark_bg_color #e4e4e4;
